--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ant-design/icons": "^5.6.1",
         "@reduxjs/toolkit": "^2.5.1",
         "antd": "^5.24.0",
+        "antd-style": "^3.7.1",
         "axios": "^1.7.9",
         "cra-template": "1.2.0",
         "flatpickr": "^4.6.13",
