--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dayjs": "^1.11.13",
         "flatpickr": "^4.6.13",
         "flyonui": "^1.3.0",
+        "lodash": "^4.17.21",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-flatpickr": "^3.10.13",
