--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@ant-design/icons": "^5.6.1",
         "@reduxjs/toolkit": "^2.5.1",
+        "@stomp/stompjs": "^7.0.0",
         "antd": "^5.24.0",
         "antd-style": "^3.7.1",
         "axios": "^1.7.9",
@@ -17,6 +18,7 @@
         "react-dom": "^18.3.1",
         "react-flatpickr": "^3.10.13",
         "react-icons": "^5.4.0",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.1.5",
         "react-scripts": "5.0.1",
