--- a/package.json
+++ b/package.json
@@ -3,27 +3,27 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@ant-design/icons": "^5.6.1",
-        "@reduxjs/toolkit": "^2.5.1",
-        "@stomp/stompjs": "^7.0.0",
-        "antd": "^5.24.0",
-        "antd-style": "^3.7.1",
-        "axios": "^1.7.9",
+        "@ant-design/icons": "5.6.1",
+        "@reduxjs/toolkit": "2.5.1",
+        "@stomp/stompjs": "7.0.0",
+        "antd": "5.24.0",
+        "antd-style": "3.7.1",
+        "axios": "1.7.9",
         "cra-template": "1.2.0",
-        "dayjs": "^1.11.13",
-        "flatpickr": "^4.6.13",
-        "flyonui": "^1.3.0",
-        "lodash": "^4.17.21",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-flatpickr": "^3.10.13",
-        "react-icons": "^5.4.0",
-        "react-infinite-scroll-component": "^6.1.0",
-        "react-redux": "^9.2.0",
-        "react-router-dom": "^7.1.5",
+        "dayjs": "1.11.13",
+        "flatpickr": "4.6.13",
+        "flyonui": "1.3.0",
+        "lodash": "4.17.21",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "react-flatpickr": "3.10.13",
+        "react-icons": "5.4.0",
+        "react-infinite-scroll-component": "6.1.0",
+        "react-redux": "9.2.0",
+        "react-router-dom": "7.1.5",
         "react-scripts": "5.0.1",
-        "sass": "^1.84.0",
-        "web-vitals": "^4.2.4"
+        "sass": "1.84.0",
+        "web-vitals": "4.2.4"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -50,9 +50,9 @@
         ]
     },
     "devDependencies": {
-        "@tailwindcss/postcss": "^4.0.5",
-        "autoprefixer": "^10.4.20",
-        "postcss": "^8.5.1",
-        "tailwindcss": "^3.4.17"
+        "@tailwindcss/postcss": "4.0.5",
+        "autoprefixer": "10.4.20",
+        "postcss": "8.5.1",
+        "tailwindcss": "3.4.17"
     }
 }
